tdf#109319 writerfilter: set DropCap.Distance

Change-Id: I3ec06e9a196897c095f227e9f765243c6c188898
Reviewed-on: https://gerrit.libreoffice.org/41185
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>